fixed pricing alignment

--- a/src/index.css
+++ b/src/index.css
@@ -276,9 +276,16 @@ nav {
 .pricing{
   display: flex;
   align-items: center;
+  justify-content: space-between;
   column-gap: 1rem;
   width: 100%;
   margin-bottom: 1rem;
+}
+
+.pricing div{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
 }
 .discounted-price{
   font-size: 1.8rem;
@@ -289,7 +296,6 @@ nav {
   font-size: 1.2rem;
 }
 .price{
-  margin-left: auto;
   font-weight: 700;
   color: #888;
   font-size: 1.2rem;
